# MVA-rs-project

./: .gitignore  README.md  helper.ipynb  index_data.pkl  pyproject.toml
notebooks/: network.ipynb  visualization.ipynb
